--- a/docs/write_up/SupplementaryTablesandFigures.tex
+++ b/docs/write_up/SupplementaryTablesandFigures.tex
@@ -40,6 +40,23 @@
 %% Figures %%
 
 \begin{figure}[!ht]
+	\label{fig:S0}
+	\begin{subfigure}{\textwidth}
+	\includegraphics[width =\linewidth]{"figures/Suppl_FactorLoading_Omega1"}
+\end{subfigure}
+\begin{subfigure}{\textwidth}
+	\includegraphics[width = \linewidth]{"figures/Suppl_FactorLoading_Omega2"}
+\end{subfigure}
+\caption{Top: First three species factor loadings for average spatial encounter
+probability, bottom: First three species factor loadings for average spatial
+density}
+
+\end{figure}
+
+
+
+
+\begin{figure}[!ht]
 	\label{fig:S1}
 	\begin{subfigure}{0.5\textwidth}
 	\includegraphics[width = \linewidth]{"figures/Factor1_DepthO1"}
