--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -37,33 +37,32 @@ Others}
 \begin{linenumbers}
 
 \begin{abstract} 
-Overexploitation of weaker stocks in mixed fisheries results when catches
+In mixed fisheries overexploitation of weaker stocks results when catches
 continue in fisheries pursuing quota for healthy stocks. As EU fisheries
-management moves to a system where all fish caught are counted against the
-quota (the `Landings obligation'), the challenge will be to catch available
-quota within new constraints else suffer reduced productivity.  A mechanism for
-decoupling exploitation of species caught together is spatial targeting, but
-this remains challenging due to complex fishery dynamics and lack of
-understanding of spatiotemporal community dynamics.  
+management moves to a count all fish caught against quota (the `Landings
+obligation'), the challenge is to catch available quota within new constraints,
+else lose productivity.  
 
-We develop a joint species distribution model to understand how spatial
-community and fishery dynamics interact to determine species and size
-composition in the highly mixed fisheries of the Celtic Sea. Clear common
-patterns for spatial distribution emerge for three species-groups commonly
-targeted and, while abundance varies inter-annually, the same species-groups
-are found in higher densities together correlating with depth and substrate.
-Subtle differences within a species-group suggest limited scope to adjust catch
-to species composition. 
+A mechanism for decoupling exploitation of species caught together is spatial
+targeting, but this remains challenging due to complex fishery dynamics and
+lack of understanding of spatiotemporal community dynamics. We apply a joint
+species distribution model to understand how spatial community and fishery
+dynamics interact to determine species and size composition in the highly mixed
+fisheries of the Celtic Sea. Clear common spatial patterns emerge for three
+distinct species-groups and, while distribution varies inter-annually, the same
+species-groups are found in higher densities together. More subtle differences
+are found within species-groups.
 
-Here we highlight the importance of dimension reduction techniques to focus
+We highlight the importance of dimension reduction techniques to focus
 management discussion on axes of maximal separation in space and time. We
 propose that spatiotemporal modelling of available data is a scientific
-requirement to addressing the challenges of managing mixed fisheries. \\ 
+requirement to address the challenges of managing mixed fisheries. \\ 
+
 
 [INCLUDE REFERENCES - comment: guidance for articles says not. I have reduced
 to fit the 150 word limit, but its still over..]
 
-[203 words]
+[178 words]
 
 \end{abstract}
 
@@ -78,7 +77,7 @@ management of fisheries has the potential to increase population sizes and
 allow increased sustainable catches, yet fisheries catch globally remains
 stagnant \cite{FAO2016}. In light of projected increased demand for fish
 protein \cite{B??n??2016} there is an important role for well managed fisheries
-to play in supporting future food security \cite{Mcclanahan2015} and so there
+to play in supporting future food security \cite{Mcclanahan2015} and there
 remains a need to ensure fisheries are managed efficiently to maximise
 productivity.
 
@@ -95,11 +94,11 @@ have no quota.
 
 Sustainability of European fisheries has been hampered by this `mixed fishery
 problem' for decades with large-scale discarding resulting \cite{Borges2015,
-	Uhlmann2014}.  However, a paradigm shift is being introduced under the
-EU Common Fisheries Policy (CFP) reform of 2012 through two significant
-management changes.  First, by 2019 all fish that are caught are due to be
-counted against the respective stock quota; second, by 2020 all fish stocks
-must be fished so as to be able to produce their Maximum Sustainable Yield
+	Uhlmann2014}.  A paradigm shift is being introduced under the EU Common
+Fisheries Policy (CFP) reform of 2012 through two significant management
+changes.  First, by 2019 all fish that are caught are due to be counted against
+the respective stock quota; second, by 2020 all fish stocks must be fished so
+as to be able to produce their Maximum Sustainable Yield
 (MSY)\cite{EuropeanParliamentandCounciloftheEuropeanUnion2013}. The changes are
 expected to contribute to attainment of the goals of Good Environmental Status
 (GES) under the European Marine Strategy Framework Directive (MSFD;
@@ -131,37 +130,39 @@ stocks while protecting weaker stocks requires understanding of these
 interactions at a meaningful scale to managers and fishers. Here, our goal is
 to develop a framework for understanding these complexities. We do so by
 implementing a spatio-temporal dimension reduction method and use the results
-to draw inference and create a framework to identify trends common among
-species-groups to describe where spatial measures can contribute to mitigating
-unwanted catches in mixed fisheries.
+to draw inference on the fishery-community dynamics, creating a framework to
+identify trends common among species-groups. We use this to describe where
+spatial measures can contribute to mitigating unwanted catches in mixed
+fisheries.
 
-[580 words]
+[578 words]
 
 \subsection{Framework for analysing spatio-temporal mixed fisheries
 	interactions}
 
 We present a framework for analysing how far spatio-temporal avoidance can
 contribute towards mitigating imbalances in quota in mixed fisheries. We use
-fisheries-independent survey data to characterise the spatio-temporal dynamics
+fisheries-independent survey data to characterise the spatiotemporal dynamics
 of key components of a fish community by employing a geostatistical Vector
-Autoregressive Spatio-temporal model (VAST). We implement a factor analysis
-decomposition to describe trends in spatio-temporal dynamics of the different
+Autoregressive Spatiotemporal model (VAST). We implement a factor analysis
+decomposition to describe trends in spatiotemporal dynamics of the different
 species as a function of \textit{n} latent variables \cite{Thorson2015} to
 identify community dynamics and drivers common among species-groups. Of
-particular importance for mixed fisheries is the ability to separate species by
-underlying factors, which can then be investigated for what spatio-temporal
-separation they pertain to. We separately model spatio-temporal encounter
-probability and catch rates to allow identification of differences in
+particular importance for mixed fisheries is the ability to analyse
+species-groups by underlying contributory factors, which can then be
+investigated for what spatio-temporal drivers to which they pertain and how
+these jointly affect species-groups. We separately model spatio-temporal
+encounter probability and catch rates to allow identification of differences in
 associations for distribution of the species-groups and densities upon
 encounter \cite{Thorson2015a}, by employing Gaussian Markov Random Fields
 (GMRFs) to capture spatial and temporal dependence within and among species
 groups for both encounter probability and catch rates \cite{Thorson2013}. VAST
 is set in a mixed modelling framework to allow estimation of fixed effects to
 account for systematic differences driving encounter and catches, such as
-survey catch rate differences while random effects capture the spatio-temporal
+survey catch rate differences, while random effects capture the spatio-temporal
 dynamics of the fish community.
 
-[200 words]
+[206 words]
 
 \subsection{Dynamics of Celtic Sea fisheries}
 
@@ -173,7 +174,7 @@ fisheries undertaken by several nations using different gear types
 the commercial catches of the Celtic Sea, with approximately 30 species
 dominating the catch \cite{Mateo2016}.
 
-We parametrise our spatio-temporal model using catch data from seven fisheries
+We parametrise our spatiotemporal model using catch data from seven fisheries
 independent surveys undertaken in the Celtic Sea over the period 1990 - 2015
 (Table S1) and include nine of the main commercial species: Atlantic cod
 (\textit{Gadus morhua}), Atlantic haddock (\textit{Melanogrammus aeglefinus}),
@@ -183,9 +184,9 @@ Atlantic whiting (\textit{Merlangius merlangus}), European Hake
 megrim (\textit{Lepidorhombus whiffiagonis}), European Plaice
 (\textit{Pleuronectes platessa}) and Common Sole (\textit{Solea solea}). These
 species make up \textgreater 60 \% of landings by towed fishing gears for the
-area (average 2011 - 2015, STECF data [INCLUDE REF]). Each species was
-separated into juvenile and adult size classes based on their legal minimum
-conservation reference size (Table S2).
+area (average 2011 - 2015;\cite{STECF2017}). Each species was separated into
+juvenile and adult size classes based on their legal minimum conservation
+reference size (Table S2).
 
 We analyse the data to understand how the different associations among emergent
 species-groups (combination of species and size class) and their potential
@@ -193,7 +194,7 @@ drivers affect catch compositions in mixed fisheries. We consider how these
 have changed over time, and the implications for mixed fisheries in managing
 catches of quota species under the EU landing obligation.
 
-[223 words]
+[239 words]
 
 \subsection{Common average spatial patterns driving species associations} A
 spatial dynamic factor analysis decomposes the dominant spatial patterns
@@ -201,7 +202,7 @@ driving differences in encounter probability and abundance. The first three
 factors account for 83.7 \% of the between species-group variance in average
 encounter probability and 69 \% of the between species-group variance in
 average density, respectively. A clear spatial pattern can been seen both for
-encounter probability and density, with a positive coefficient association with
+encounter probability and density, with a positive coefficient associated with
 the first factor in the inshore North Easterly part of the Celtic Sea into the
 Bristol Channel and Western English Channel, moving to a negative association
 offshore in the south-westerly waters (Figure 1). The species-group loadings
@@ -215,7 +216,7 @@ species-groups.
 On the second factor a North / South split can be seen for encounter
 probability at approximately 49$^{\circ}$ N while density is more driven by a
 positive association in the deeper westerly waters as well as some inshore
-areas. Species-group ssociations with the second factor indicate there are
+areas. Species-group associations with the second factor indicate there are
 positive associations for juvenile monkfish (piscatorius), juvenile hake,
 juvenile megrim, plaice and juvenile whiting for average density, which may
 reflect two different spatial distributions in the more offshore and in the
