Text updates to manuscript

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -209,9 +209,9 @@ offshore in the south-westerly waters (Figure 1). The species-group loadings
 coefficients show plaice, sole and whiting to be positively associated with the
 first factor for encounter probability while the other species-groups are
 negatively associated (Figure S1: QUESTION WHETHER THIS SHOULD BE A MAIN
-FIGURE?). For average density, positive associations are also found for haddock
-and juvenile cod. This is indicative of a more inshore distribution for these
-species-groups. 
+FIGURE? - POSS COMBINED WITH 1). For average density, positive associations are
+also found for haddock and juvenile cod. This is indicative of a more inshore
+distribution for these species-groups. 
 
 On the second factor a North / South split can be seen for encounter
 probability at approximately 49$^{\circ}$ N while density is more driven by a
@@ -235,12 +235,9 @@ while adult monkfish (budegassa and piscatorius), adult haddock, megrims,
 juvenile plaice and sole are negatively associated reflecting their more
 southerly distribution (Figure S1).
 
-[365 words]
-
-[NEXT TWO PARAGRAPHS CAN BE MOVED LOWER OR SUPPLEMENTARY. DISCUSS HERE TO WHICH
-SPECIES WERE ASSOCIATED WITH WHICH FACTORS INTRODUCED ABOVE, I.E., FIGURE 2.]In
-a preliminary investigation of the main observed covariates influencing the
-factors, the first factor was highly correlated with log(depth) for both
+While a factor composition is modelling unobserved drivers of distribution, we
+considered what might be driving the differences seen in the spatial factor
+loadings. The first factor was highly correlated with log(depth) for both
 encounter probability (-0.85, CI = -0.88 to -0.81; Figure S2) and density
 (-0.71, CI = -0.77 to -0.65; Figure S4). A random forest classification tree
 assigned 80 \% of the variance in the first factor for encounter probability to
@@ -261,17 +258,17 @@ distributions has been identified in other marine species distribution models
 such data is unavailable at appropriate spatial resolution, the spatial factor
 analysis can adequately characterise these influences.
 
-[229 words]
+[617 words]
 
 \subsection{Changes in spatial patterns over time, but stability in species
 	dynamics}
 
-While there are clear patterns in the factor coefficients describing spatial
+While there are clear spatial patterns in the factor coefficients describing
 differences in average encounter probability and density (Figure 1), the
 inter-annual differences in factor coefficients show less structure (Figures
-S5, S6). These inter-annual differences are also important as they reflect the
+S5, S6). These inter-annual differences are important as they reflect the
 ability of fishers to predict where they can target species from one year to
-the next.
+the next, without which it may be difficult to avoid unwanted catch.
 
 While spatio-temporal factor coefficients did not show consistent trends from
 year to year, among species-groups there were clear relationships (Figure 2).
@@ -281,13 +278,14 @@ negatively associated with the second axes of Figure 2a) and the roundfish and
 flatfish (species-grouping more positively associated with the second axes of
 Figure 2a). For spatio-temporal density (Figure 2b) cod, haddock and whiting
 (the roundfish species) are separated from plaice, sole (the flatfish) and
-deeper water species. As such, higher catches of a species within a group would
-be expected when catching another species within that group. This suggests that
-a common environmental driver is influencing the distributions of the species
-groups, and that driver differentially affects the species groups. Temperature
-is often included as a covariate in species distribution models, but was found
-not to contribute to the variance in the factor coefficients (Figure S7,
-correlations for either encounter probability or density $\sim$ 0).
+deeper water species. As such, it can be predicted that higher catches of a
+species within a group would be expected when catching another species within
+that group. This suggests that a common environmental driver is influencing the
+distributions of the species groups, and that driver differentially affects the
+species groups. Temperature is often included as a covariate in species
+distribution models, but was found not to contribute to the variance in the
+factor coefficients (Figure S7, correlations for either encounter probability
+or density $\sim$ 0).
 
 [178 words]
 
@@ -308,7 +306,9 @@ deeper waters (hake, megrim and both anglerfish species) with the megrim
 strongly associated with the budegassa anglerfish species (0.88). Negative
 relationships were found between plaice-sole and the monkfish species (-0.27,
 -0.26 for the adult size class with budegassa adults respectively) and hake
-(-0.33, -0.37) indicating spatial separation in distributions.
+(-0.33, -0.37) indicating spatial separation in distributions. This confirms
+the associations among species seen in the factor loadings, with three distinct
+species-group assemblages being present.
 
 Correlation coefficients for the average density (Figure 3b) show less
 significant positive or negative relationships among species-groups then for
@@ -331,21 +331,22 @@ group \textit{y} across all years) are linearly associated with the
 spatio-temporal population correlations (representing how correlations between
 species-group \textit{x} and species-group \textit{y} change from year to
 year), indicating generally predictable relationships between species-groups
-from one year to the next, i.e. a positive or negative association between two
-species-groups is likely be persist from one year to the next. The correlation
-coefficients were 0.59 (0.52 - 0.66) and 0.47 (0.38 - 0.55) for encounter
-probability and density respectively.  However, a linear regression between the
-spatial correlations and the spatio-temporal correlations shows high variance
-(R\textsuperscript{2} = 0.36 and 0.22 respectively), indicating that the scale
-of these relationships does change from one-year to the next. This would have
-implications for the predictability of the relationship between catches of one
-species-group and another when trying to balance catch with quotas in mixed
-fisheries. It can also be seen in the spatial factor scores that there are
-subtle differences in spatial patterns in factor coefficients from one year to
-the next (Figures S5 and S6) indicating changes may be driven by temporally
-changing environmental factors.
+from one year to the next. This suggests that a positive or negative
+association between two species-groups is likely be persist from one year to
+the next, and that species-groups are consistently associated with each other
+in the catch. The correlation coefficients were 0.59 (0.52 - 0.66) and 0.47
+(0.38 - 0.55) for encounter probability and density respectively.  However, a
+linear regression between the spatial correlations and the spatio-temporal
+correlations shows high variance (R\textsuperscript{2} = 0.36 and 0.22
+respectively), indicating that the scale of these relationships does change
+from one-year to the next. This would have implications for the predictability
+of the relationship between catches of one species-group and another when
+trying to balance catch with quotas in mixed fisheries. It can also be seen in
+the spatial factor scores that there are subtle differences in spatial patterns
+in factor coefficients from one year to the next (Figures S5 and S6) indicating
+changes may be driven by temporally changing environmental factors.
 
-[459 words]
+[560 words]
 
 
 \subsection{Subtle differences in distributions may be important to separate
@@ -356,10 +357,10 @@ probability of catching the other species, which has important implications for
 how spatial avoidance can be used to support implementation of the EU's
 landings obligation. If production from mixed fisheries is to be maximised,
 decoupling catches of species between and within the groups will be key. For
-example, asking where he maximal separation in the densities of two coupled
+example, asking where the maximal separation in the densities of two coupled
 species is likely to occur? To address this requirement, we map the difference
 in spatial distribution within a group for each of the species-groupings for a
-single year (2015) (Figure 4). 
+single year (2015; Figure 4). 
 
 Figure 4a indicates that cod had a more North-westerly distribution than
 haddock, while cod was more westerly distributed than whiting roughly
@@ -373,7 +374,7 @@ megrim (though for megrim, a fairly even relative distribution elsewhere is
 indicated by the large amount of white space). For anglerfishes and megrim
 (Figure 4f), anglerfishes have a more easterly distribution than megrim. For
 the flatfish species plaice and sole (Figure 4g), plaice appear to be more
-densely distributed along the coastal areas of Ireland and the UK, while sole
+densely distributed along the coastal areas of Ireland and Britain, while sole
 are more densely distributed in the Southern part of the English Channel along
 the coast of France.
 
@@ -383,14 +384,16 @@ both the gear selectivity and area fished play important contributions to the
 catch compositions; in the inshore area (location 'A') plaice and sole are the
 two main species in catch reflecting their distribution and abundance, though
 the otter trawl gear catches a greater proportion of plaice to sole than the
-beam trawl.  The area between the UK and Ireland (location 'B') has a greater
+beam trawl.  The area between Britain and Ireland (location 'B') has a greater
 contribution of whiting, haddock, cod, hake and anglerfishes in the catch with
 the Otter trawl catching a greater proportion of the roundfish, haddock,
-whiting and cod. The offshore area has a higher contribution of megrim,
-anglerfishes and hake with the Otter trawl catching a greater share of hake and
-the Beam trawl a greater proportion of megrim. Megrim dominates the catch for
-both gears in location 'C', reflecting its relative abundance in the area.
-[489 words]
+whiting and cod while the beam trawl catches more anglerfishes and megrims. The
+offshore area has a higher contribution of megrim, anglerfishes and hake with
+the Otter trawl catching a greater share of hake and the Beam trawl a greater
+proportion of megrim. Megrim dominates the catch for both gears in location
+'C', reflecting its relative abundance in the area.  
+
+[456 words]
 
 \subsection{Application of framework to support implementation landing
 	obligation in mixed fisheries} In application to the Celtic Sea we have
@@ -418,7 +421,7 @@ selectivity characteristics of gear (e.g. \cite{Santos2016}).
 A role that science can play in supporting effectiveness of spatio-temporal
 avoidance could be to provide probabilistic advice on likely hotspots for high
 probability of species occurrence and high species density which can inform
-fishing decisions. Such advice could be based also on data obtained directly
+fishing decisions. Such advice could be supported by data obtained directly
 from commercial fishing vessels at a higher temporal resolution, providing
 real-time forecasts to inform fishing choices that also captures seasonal
 differences in distributions. The framework we develop here could be extended
@@ -426,34 +429,35 @@ to include commercial data and real-time updates.
 
 An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieving catch balancing in fisheries.
-While this is likely to be fishery specific with differing results observed
-elsewhere (e.g. BC, East coast US, - will add refs) here we provide a framework
-that could be used to simulate different management and/or fishing effort
-scenarios. Such results could inform what additional measures are needed to
-support transition to the new management system, in order to ensure mixed
-fisheries can sustainably increased catches consistent with rebuilding fish
-populations and help support future food security.
+While this is likely to be fishery and even fisher specific with differing
+results observed elsewhere (e.g. in the British Columbia trawl
+fishery\cite{Branch2008} and the West US coast\cite{Kuriyama2016}) here we
+provide a framework that could be used to simulate different management and/or
+fishing effort scenarios. A supporting analysis could be to identify the joint
+production function for the entire spatial domain for each pair of species, as
+a way of identifying optimum fishing locations to meet a given target or
+avoidance objective\cite{Reimer2017}. In conjunction such analysis could
+identify the limits of spatial targeting and avoidance in contributing to
+meeting the goal of maximising catches in mixed fisheries under single stock
+quota constraints. It may also inform what additional measures are needed (e.g.
+gear changes, time-area closures) to support transition to the new management
+system, in order to ensure mixed fisheries can sustainably increased catches
+consistent with rebuilding fish populations and help support future food
+security.
 
-[[Figure 5 shows the joint production function for the entire spatial domain,
-giving the global production sets for the years 2011 - 2015. It gives the space
-in which vessels have to operate where they can change the relative composition
-of each species in the catch as a function of changing location fished only.
-The convex hull of the space is the flexibility vessels have in order to adapt
-to the changing fishing opportunities given the association of species with
-each other\cite{Reimer2017}. As can be seen from Figure 5a which shows the
-trade-off between cod and haddock for an Otter trawler....]]
+Complex environmental, fishery and community drivers of distribution for groups
+of species highlights the scale of the challenge in separating catches within
+the species-groups using spatial management measures. This has important
+implications for management of the mixed fisheries under the EU landings
+obligation and our analysis identifies where it may be easier to separate
+catches of species (among groups) and where it is more challenging (within
+groups). The framework we propose reduces the complexity of the system to it's
+major components and thus allows informed management discussion over more
+traditional anecdotal knowledge of single-species distribution in space and
+time.
 
-[[Common environmental drivers of distribution for groups of species highlights
-the scale of the challenge in separating catches within the species-groups
-using spatial management measures, having important implications for management
-of the mixed fisheries under the EU landings obligation. [FINAL PARAGRAPH NEEDS
-WORK. Perhaps something like commented section below?] The framework we propose
-reduces the complexity of the system to it's major components and thus allows
-informed management discussion over more traditional anecdotal knowledge of
-single-species distribution in space and time. ]]
+[words 583]
 
-
-[words 416]
 
 \section*{Methods}
 
@@ -632,22 +636,22 @@ insight into species co-occurrence and the strength of associations in space
 and time. 
 
 Total words: \\
-Abstract:	 	  245  / 150 \\
-Intro:   		  577  \\
-Outline:		  203 \\
-Case study desc:	  217 \\
-Results 1:		  397 \\
+Abstract:	 	  178 / 150 \\
+Intro:   		  578  \\
+Outline:		  206 \\
+Case study desc:	  239 \\
+Results 1:		  617 \\
 Results 2:		  178 \\
-Results 3:		  291 \\
-Discussion:	          573 \\
-Conclusions:	          416  \\
-Methods:		 1019 1237 \\
+Results 3:		  560 \\
+Discussion:	          456 \\
+Conclusions:	          583  \\
+Methods:		  1248 \\
 \\
-TOTAL:			 4334 \\
-Total - abstract         4089 / 3500 \\
+TOTAL:			 4843 \\
+Total - abstract         4665 / 3500 \\
 
-Figures: 5 / 6 \\
-References: 37 / 50 \\
+Figures: 4 / 6 \\
+References: 39 / 50 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{linenumbers}
