--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -16,16 +16,19 @@
 
 \begin{document}
 
-
 %% Figure 1 - spatial factors
 \begin{figure}
 \begin{center}
-	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
+	\includegraphics[width=\linewidth]{"Fig1_Combined"}
 	\label{fig:1}
-	\caption{Spatial factor coefficients illustrating the three main separating components for: (a) the average spatial encounter
-		probability and (b) the average density . Scale goes from red (positive association to the factor) to white (no association) to blue (negative association)}
+	\caption{Factor coefficients for the first three factors for (a) the
+		average encounter probability and (b) the average density for
+		the species-groups (outer figures) and spatially (inner
+		figures).  Red: positive association to the factor, Blue:
+		negative association}
 \end{center}
 \end{figure}
+
 
 
 %% Figure 2 - PCA style plots
