--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -208,8 +208,7 @@ Bristol Channel and Western English Channel, moving to a negative association
 offshore in the south-westerly waters (Figure 1). The species-group loadings
 coefficients show plaice, sole and whiting to be positively associated with the
 first factor for encounter probability while the other species-groups are
-negatively associated (Figure S1: QUESTION WHETHER THIS SHOULD BE A MAIN
-FIGURE? - POSS COMBINED WITH 1). For average density, positive associations are
+negatively associated. For average density, positive associations are
 also found for haddock and juvenile cod. This is indicative of a more inshore
 distribution for these species-groups. 
 
@@ -220,7 +219,7 @@ areas. Species-group associations with the second factor indicate there are
 positive associations for juvenile monkfish (piscatorius), juvenile hake,
 juvenile megrim, plaice and juvenile whiting for average density, which may
 reflect two different spatial distributions in the more offshore and in the
-inshore areas (Figure S1).
+inshore areas (Figure 1).
 
 On the third factor, there is a positive association with the Easterly waters
 for encounter probability and negative with the westerly waters. This manifests
@@ -233,7 +232,7 @@ with the positive coefficients in the Northerly areas. Juvenile monkfish
 whiting are also positively associated with the third factor towards the North
 while adult monkfish (budegassa and piscatorius), adult haddock, megrims,
 juvenile plaice and sole are negatively associated reflecting their more
-southerly distribution (Figure S1).
+southerly distribution (Figure 1).
 
 While a factor composition is modelling unobserved drivers of distribution, we
 considered what might be driving the differences seen in the spatial factor
@@ -680,11 +679,12 @@ References: 39 / 50 \\
 %% Figure 1 - spatial factors
 \begin{figure}
 \begin{center}
-	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
+	\includegraphics[width=0.8\linewidth]{"Fig1_Combined"}
 	\label{fig:1}
-	\caption{Spatial Factor coefficients for (a) the average spatial encounter
-		probability and (b) the average density,  on the first 3
-		factors. Red: positive association to the factor, Blue:
+	\caption{Factor coefficients for the first three factors for (a) the
+		average encounter probability and (b) the average density for
+		the species-groups (outer figures) and spatially (inner
+		figures).  Red: positive association to the factor, Blue:
 		negative association}
 \end{center}
 \end{figure}
